k8s/registry/registry-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: registry.local
   http:
     paths:
     - path: /(.*)
       pathType: Prefix
       backend:
         service:
           name: registry
           port:
             number: 8761
